# breakbrick

./: CMakeLists.txt  README.md  vcpkg.json
include/: application.h  config.h.in  core.h  display_manager.h  engine.h  index_buffer.h  input_button.h  input_manager.h  input_state.h  program.h  shader.h  vertex_arrays.h  vertex_buffer.h
src/: Input_manager.cpp  application.cpp  display_manager.cpp  engine.cpp  index_buffer.cpp  input_button.cpp  log_formatter.cpp  main.cpp  program.cpp  shader.cpp  vertex_arrays.cpp  vertex_buffer.cpp
